# code-voyager

./: .gitignore  .mise.toml  CLAUDE.md  INSTALL.md  README.md  justfile  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: plugin.json
.claude/fixtures/hooks/: post_tool_use.json  post_tool_use_error.json  post_tool_use_success.json  post_tool_use_with_skill.json  pre_compact.json  session_end.json  session_start.json
.claude/fixtures/llm/: invalid_json_response.json  nested_json_response.json  sample_schema.json  schema_validation_failure.json  simple_json_response.json  text_in_json_wrapper.json
.claude/fixtures/transcripts/: sample.jsonl  session_0001.jsonl  (+1 more)
.claude/hooks/: post_tool_use_feedback.py  pre_compact.py  session_end.py  session_start.py
commands/: brain.md  curriculum.md  factory.md
docs/: refinement.md  retrieval.md  voyager.md
hooks/: hooks.json
plan/: PROGRESS.md  README.md
plan/tasks/: 1.md  10.md  11.md  12.md  13.md  14.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
scripts/dev/: sync_skills.py
scripts/hooks/: post_tool_use.py  pre_compact.py  session_end.py  session_start.py
scripts/lib/: claude_print.py
skills/curriculum-planner/: SKILL.md
skills/session-brain/: reference.md
skills/skill-factory/: SKILL.md  reference.md
skills/skill-refinement/: SKILL.md  reference.md
skills/skill-retrieval/: reference.md
src/voyager/: __init__.py  config.py  io.py  jsonschema.py  llm.py  logging.py
tests/: test_io.py  test_jsonschema.py  test_llm.py  test_logging.py  test_snapshot.py
(+54 files in other folders)
